# Lucid

./: .gitignore  README.demos.md  README.fr-FR.md  README.md  README.zh-CN.md  config.toml  design.md  pyproject.toml  todo.md
Docs/: competitor-analysis.md  design.md  doze.md  draw_pikachu_paint.ps1  lucid.en.html  lucid.fr-FR.html  lucid.html  lucid.zh-CN.html  mobile-agents-analysis.md  multimodal-input.md  screenshot.md  skills.md  todo.md  visual-notify-taskbar.md  voice-input.md
Test/: README.md  SKILL.md  queries.json  run.py
app/: README.md  package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  license_dialog.txt  tauri.conf.json
lucid/: __init__.py  __main__.py  config.py  context_manager.py  cursor_indicator.py  doze.py  examples.py  input_driver.py  launcher_icons.py  launchers.py  llm_client.py  loop.py  memory.py  meta_tools.py  regions.py  runlog.py  safety.py  scheduler.py  screen.py  selfcheck.py  sidecar.py  skill_repos.py  skills.py  system_prompt.py  taskbar_monitor.py  taskbar_sources.py  taskbar_uia_monitor.py  templates.py  tools.py  tooltips.py  tray_promote.py  uia.py  voice.py  voice_dispatch.py  webread.py  window.py
lucid/apps/: __init__.py  cmd.py  edge.py  excel.py  explorer.py  lucid.py  mail.py  notepad.py  outlook.py  paint.py  photos.py  powerpoint.py  powershell.py  run.py  save_dialog.py  settings.py  snipping_tool.py  teams.py  vscode.py  (+3 more)
packaging/: chroma_key.py  ctrlapp.spec  ctrlapp_entry.py  fit_icon.py  klawbot.spec  klawbot_entry.py  lucid.spec  lucid_entry.py  make_icon.py  otterscope.spec  otterscope_entry.py
(+140 files in other folders)
