[project]
name = "lucid"
version = "0.5.0"
description = "Windows desktop agent driven by Claude vision — no MCP, no app APIs."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pywin32>=306; sys_platform == 'win32'",
    "pyperclip>=1.8.2",
    "tomli>=2.0.1; python_version < '3.11'",
    "rich>=13.7.0",
    "imagehash>=4.3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Voice input (push-to-talk ASR). Optional because it adds ~80MB of native
# binaries (CTranslate2 + onnxruntime + av) — disable [voice].enabled in
# config.toml to leave them unloaded at runtime even if installed.
voice = [
    "faster-whisper>=1.1.0",
    # Whisper outputs Traditional Hanzi for ~zh fairly often; this pure-
    # Python converter normalises everything to Simplified post-decode.
    "zhconv>=1.4.3",
]
# Trafilatura article extraction. Optional but strongly recommended — when
# present, read_webpage uses it instead of the in-house HTMLParser for far
# cleaner CJK/news/blog text. Falls back transparently if unavailable.
reader = [
    "trafilatura>=1.12.0",
]

[project.scripts]
lucid = "lucid.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lucid"]
